--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ I took courses with Coursera in order to improve my work skills, studied custome
                                 <!-- Start: Cidade -->
                                 <li><i class="fa fa-home" style="color: rgb(0,150,136);"></i>&nbsp; &nbsp;&nbsp;Dessau-Roßlau, Germany<br></li><!-- End: Cidade -->
                                 <!-- Start: Email -->
-                                <li><i class="fa fa-envelope" style="color: rgb(0,150,136);"></i>&nbsp; &nbsp;&nbsp;<a class="text-dark text-decoration-none" href="mailto:jonathancaris@protonmail.com">jonathancaris@protonmail.com</a></li><!-- End: Email -->
+                                <li><i class="fa fa-envelope" style="color: rgb(0,150,136);"></i>&nbsp; &nbsp;&nbsp;<a class="text-dark text-decoration-none" href="mailto:jonathancaris@protonmail.com">jonathancaris [at] protonmail.com</a></li><!-- End: Email -->
                                 <!-- Start: Telefone -->
                                 <li><i class="fa fa-phone" style="color: rgb(0,150,136);"></i>&nbsp; &nbsp;&nbsp;<a class="text-dark text-decoration-none" href="https://api.whatsapp.com/send/?phone=5512987053461&amp;text&amp;app_absent=0">+5512 987 053 461</a></li><!-- End: Telefone -->
                             </ul><!-- Start: Footer Social -->
