--- a/Certificates.html
+++ b/Certificates.html
@@ -68,56 +68,56 @@ I took courses with Coursera in order to improve my work skills, studied custome
             <!-- Start: Intro -->
             <div class="intro">
                 <h2 class="text-center">Certificate</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae.</p>
+                <p class="text-center">Some of my certificates can be found here at this repository; </p>
             </div><!-- End: Intro -->
             <!-- Start: Features -->
             <div class="row justify-content-center features">
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><img class="rounded img-fluid border" src="assets/img/CCP.jpg?h=6c1164fc6b1de83b32ae0d168981b93d" style="margin-bottom: 15px;">
                         <h3 class="name">Crash Course on Python</h3>
-                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/QKV7EHTUU549">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
+                        <p class="description">Being able to write simple programs using Python; figure out how the building blocks of programming fit together; and combine all of this knowledge to solve a complex programming problem.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/QKV7EHTUU549">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><img class="rounded img-fluid border" src="assets/img/FM(WH).jpg?h=2be1d5158237b053f37e16db8a32a7af" style="margin-bottom: 15px;">
                         <h3 class="name">Financial Markets (With Honors)</h3>
-                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p><a class="btn btn-primary" role="button" href="https://www.coursera.org/account/accomplishments/verify/YY4NUK6NKTVG">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
+                        <p class="description">I learned the basics of financial markets, insurance, and CAPM (Capital Asset Pricing Model).</p><a class="btn btn-primary" role="button" href="https://www.coursera.org/account/accomplishments/verify/YY4NUK6NKTVG">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><img class="rounded img-fluid border" src="assets/img/EDA.jpg?h=7b012536d925e0505998a028b2add1a5" style="margin-bottom: 15px;">
                         <h3 class="name">Excel for Data Analysis</h3>
-                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/UW64UB872Q8A">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
+                        <p class="description">This course starts with an introduction to spreadsheets like Microsoft Excel and Google Sheets and loading data from multiple formats.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/UW64UB872Q8A">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><img class="rounded img-fluid border" src="assets/img/ICP_USP.jpg?h=85483689cf8b050eb4ccd8ab3d646323" style="margin-bottom: 15px;">
                         <h3 class="name">Introduction to Computer Science with Python</h3>
-                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/7H3Q9V75P4F2">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
+                        <p class="description">Aims to learn programming using python and write small codes</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/7H3Q9V75P4F2">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><img class="rounded img-fluid border" src="assets/img/PFE.jpg?h=2c4257a69bd5c54d0d15d972e9a9e5ed" style="margin-bottom: 15px;">
                         <h3 class="name">Programming for Everybody</h3>
-                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/VPHLDAEPP3CE">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
+                        <p class="description">This course aims to teach programming computers using Python.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/VPHLDAEPP3CE">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><img class="rounded img-fluid border" src="assets/img/TSF.jpg?h=6b7b536a9337ae06ba81091a2331dc06" style="margin-bottom: 15px;">
                         <h3 class="name">Technical Support Fundamentals</h3>
-                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/UT7VQATGAU6Y">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
+                        <p class="description">Learned about the different facets of Information Technology, like computer hardware, the Internet, computer software, troubleshooting, and customer service. This course covers a wide variety of topics in IT that are designed to give you an overview of what’s to come in this program.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/UT7VQATGAU6Y">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><img class="rounded img-fluid border" src="assets/img/WDS.jpg?h=31c01219da6d71339a3126a6a8cacc7d" style="margin-bottom: 15px;">
                         <h3 class="name">What is Data Science</h3>
-                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p><a class="btn btn-primary" role="button" href="https://www.coursera.org/account/accomplishments/certificate/2DWZS8M349AZ">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
+                        <p class="description">An overview of what data science is today</p><a class="btn btn-primary" role="button" href="https://www.coursera.org/account/accomplishments/certificate/2DWZS8M349AZ">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><img class="rounded img-fluid border" src="assets/img/IDA.jpg?h=1ac84269bab0d5ccc1603f1ec4e7419b" style="margin-bottom: 15px;">
                         <h3 class="name">Introduction to Data Analysis</h3>
-                        <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/SX42V3UQ7FB3">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
+                        <p class="description">This course presents a gentle introduction into the concepts of data analysis, the role of a Data Analyst, and the tools that are used to perform daily functions.</p><a class="btn btn-primary" role="button" href="http://coursera.org/verify/SX42V3UQ7FB3">View Certificate&nbsp; &nbsp;<i class="fa fa-mortar-board"></i></a>
                     </div>
                 </div>
             </div><!-- End: Features -->
