--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ I took courses with Coursera in order to improve my work skills, studied custome
                                 <!-- Start: Trabalho -->
                                 <li><i class="fa fa-suitcase" style="color: rgb(0,150,136);"></i>&nbsp; &nbsp; UX Researcher and Political Scientist</li><!-- End: Trabalho -->
                                 <!-- Start: Cidade -->
-                                <li><i class="fa fa-home" style="color: rgb(0,150,136);"></i>&nbsp; &nbsp;&nbsp;Dessau-Roßlau, Germany<br></li><!-- End: Cidade -->
+                                <li><i class="fa fa-home" style="color: rgb(0,150,136);"></i>&nbsp; &nbsp;&nbsp;Brazil<br></li><!-- End: Cidade -->
                                 <!-- Start: Email -->
                                 <li><i class="fa fa-envelope" style="color: rgb(0,150,136);"></i>&nbsp; &nbsp;&nbsp;<a class="text-dark text-decoration-none" href="mailto:jonathancaris@protonmail.com">jonathancaris [at] protonmail.com</a></li><!-- End: Email -->
                                 <!-- Start: Telefone -->
